improve resolve name api documentation
